tests/fixtures/negative/release-engineering/NonAsciiIdentifier.kt
package com.example.releaseengineering

class Resume {
    fun display() {}
}
